00_local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    spec.ingressClassName: "nginx"
spec:
  ingressClassName: "nginx"
  defaultBackend:
    service:
      name: api-service
      port:
        number: 30080
