00_local/egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: local
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
